--- a/EnterpriseCms.Application/EnterpriseCms.Application.csproj
+++ b/EnterpriseCms.Application/EnterpriseCms.Application.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.1.0" />
+    <PackageReference Include="FluentValidation" Version="12.1.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EnterpriseCms.Domain\EnterpriseCms.Domain.csproj" />
   </ItemGroup>
 
